# Twitter-Clone-WASM

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
apollo-gateway/: Dockerfile  index.js  package.json
app/: .env  .gitignore  package-lock.json  package.json  sanity.js  tailwind.config.js  typings.d.ts
app/components/: Feed.tsx  Sidebar.tsx  SidebarRow.tsx  Tweet.tsx  TweetBox.tsx  Widgets.tsx  sidebar.tsx
app/pages/: _app.tsx  index.tsx
app/pages/api/: addComment.ts  addTweet.ts  getComments.ts  getTweet.ts
app/pages/api/auth/: [...nextauth].js
app/real-time-blogging-platform/: package.json  sanity.json
app/real-time-blogging-platform/schemas/: comment.js  schema.js  tweet.js
app/utils/: fetchComments.ts  fetchTweets.ts
auth-service/: .env  Cargo.toml  Dockerfile
auth-service/migrations/2022-03-26-101256_users/: up.sql
auth-service/src/: db.rs  lib.rs  main.rs  redis.rs  schema.rs  server.rs
auth-service/src/graphql_module/: context.rs  schema.rs
auth-service/src/graphql_module/modules/: mod.rs  utils.rs
auth-service/src/graphql_module/modules/bookstore/: bookstore.rs  mod.rs
auth-service/src/graphql_module/modules/track/: mod.rs  models.rs  resolver.rs
auth-service/src/graphql_module/modules/user_model/: mod.rs  model.rs  provider.rs  resolver.rs
backend/: Cargo.toml
backend/src/: lib.rs  schema.rs
backend/src/graphql_module/: mod.rs
backend/src/graphql_module/modules/: mod.rs
backend/src/graphql_module/modules/bookstore/: models.rs  provider.rs  types.rs
blog-service/: .env  Cargo.toml  Dockerfile
blog-service/migrations/2022-03-28-072052_posts/: down.sql  up.sql
blog-service/migrations/2022-04-02-080659_add_comments/: down.sql  up.sql
blog-service/migrations/2022-04-02-214531_comments/: up.sql
blog-service/migrations/2022-04-05-000056_user_duplication/: down.sql  up.sql
blog-service/migrations/2022-04-05-000909_users_comment/: down.sql  up.sql
blog-service/migrations/2022-04-05-001220_user_list/: down.sql  up.sql
blog-service/migrations/2022-04-05-004140_associate/: down.sql  up.sql
blog-service/migrations/2022-04-05-004435_posts_associate/: down.sql  up.sql
blog-service/migrations/2022-04-05-025749_user_table/: down.sql  up.sql
blog-service/migrations/2022-04-05-055748_user_to_post/: down.sql  up.sql
blog-service/src/: error.rs  lib.rs  main.rs  redis.rs  schema.rs  server.rs
blog-service/src/graphql_module/: context.rs  mod.rs  schema.rs
blog-service/src/graphql_module/modules/: mod.rs  utils.rs
blog-service/src/graphql_module/modules/comments/: mod.rs  models.rs  providers.rs  resolvers.rs
blog-service/src/graphql_module/modules/posts/: mod.rs  models.rs  provider.rs  resolver.rs
blog-service/src/graphql_module/modules/user_model/: mod.rs  model.rs  provider.rs
blog-service/src/graphql_module/modules/users/: mod.rs
blog-service/src/graphql_module/posts/: mod.rs  models.rs  provider.rs  resolver.rs  service.rs
blog-service/src/utils/: mod.rs  rate_limiter.rs  redis.rs
blog_ingestion_service/: Cargo.toml
blog_ingestion_service/src/: lib.rs  main.rs
blog_ingestion_service/src/graphql/: config.rs
comments/: .env  Cargo.toml
comments/migrations/2022-05-06-044613_user_comments/: down.sql  up.sql
comments/src/: lib.rs  main.rs  schema.rs
comments/src/comments/: mod.rs
comments/src/graphql/: config.rs  kafka.rs  mod.rs  root_schema.rs
comments/src/graphql/modules/: model.rs  resolver.rs  schema.rs
common/: Cargo.toml
common-utils/: Cargo.toml
common-utils/src/: token.rs
common/src/: error.rs  lib.rs  token.rs
frontend/: .env  .gitignore  Cargo.toml  Dockerfile  index.html
frontend/assets/css/: index.css
frontend/assets/css/components/: feed.css  post.css  sidebar.css  sidebarOption.css  tweet.css
frontend/src/: app.rs  main.rs  types.rs
frontend/src/components/: feed.rs  footer.rs  header.rs  mod.rs  navbar.rs  post.rs  profile_feed.rs  sidebar.rs  tweetbox.rs  widget.rs
frontend/src/components/profile/: mod.rs  profile_comp.rs
frontend/src/components/sidebar/: mod.rs  sidebar.rs  sidebar_options.rs
frontend/src/components/widgets/: mod.rs  news_widget.rs
frontend/src/models/: mod.rs  news_widget.rs  post.rs  profileinfo.rs  user.rs
frontend/src/router/: about.rs  contact.rs  follow.rs  full_post.rs  home.rs  mod.rs  profile.rs  profile_page.rs
frontend/src/service/: fetch.rs  future.rs  mod.rs  posts.rs
frontend/src/types/: mod.rs  post.rs  profile.rs  profileinfo.rs  user.rs
monitoring /alertmanager/: alertmanager.yml
monitoring /grafana/provisioning/dashboards/: providers.yml
monitoring /grafana/provisioning/datasources/: datasources.yml
monitoring /prometheus/: prometheus.yml  rules.yml
template/src/: main.rs
