[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-web-lab = "0.15.0"
actix-cors = "0.6"
async-graphql = "3"
async-graphql-actix-web = "3"
env_logger = "0.9"
log = "0.4"
slab = "0.4.2"
diesel = { version = "1.4.8", features = ["postgres", "uuid", "r2d2", "chrono", "numeric"] }
dotenv = "0.15.0"
failure = "0.1.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel_migrations = "1.4.0"
