[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
async-graphql = { version = "3.0.37", features = ["apollo_tracing"] }
async-graphql-actix-web = "3.0.37"
chrono = "0.4.19"
diesel = "1.4.8"
jsonwebtoken = "8.0.1"
lazy_static = "1.4.0"
serde = "1.0.136"
strum = "0.24.0"
strum_macros = "0.24.0"
thiserror = "1.0.30"
